--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-12 05:16:50
+lastsearch = 2024-07-12 08:00:47
 
 [www.instagram.com]
 match = -26.7%%
@@ -67,8 +67,8 @@ title = Civil Servants Advanced Search
 url = https://www.directory.gov.hk/advance_search2.jsp;jsessionid=99F27B93AD62B7E5177AC6539CC5F708?dn0=&surname_c=start&surname=&fname_c=start&fname=&title_c=start&title=&tel_c=start&tel=2594624&fax_c=equal&fax=&tel2_c=start&tel2=&mail_c=start&mail=&counter=0&&lang=eng&validate=yes&src=aservant&sort=cn&
 
 [repository.hku.hk]
-match = -40.0%%
-title = Professor Chan Hoi Shan Sophelia
+match = 6.7%%
+title = Dr Chan Hoi Shan Sophelia
 url = https://repository.hku.hk/cris/rp/rp02210
 
 [www.protocol.gov.hk]
