--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-12 06:19:43
+lastsearch = 2024-07-12 08:00:35
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -205.9%%
+title = If an HOA in state does not enforce its rules for a certain ...
+url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [www.hopb.co]
 match = -141.2%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -217.6%%
-title = This home owners association president gets put in our place ...
-url = https://www.tiktok.com/@themanwiththehat/video/7359924561258745120
+match = -170.6%%
+title = Original Video of Hoa Guy Fines Neighbor for to Many ...
+url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
 
 [www.steadily.com]
 match = 0.0%%
