--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-12 04:30:26
+lastsearch = 2024-07-12 07:58:01
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illVxv--L&sig=ACfU3U3t29jGwUHBsyaQ_FQOcsyhD61zPQ&hl=en&sa=X&ved=2ahUKEwio7qnF95-HAxUOkokEHfWvCDEQ6AF6BAgWEAM
+match = -194.1%%
+title = Diccionario geográfico universal, 4: dedicado a la Reina ...
+url = https://books.google.com/books?id=eKu8rfmV-_cC&pg=PA628&lpg=PA628&dq=man+in+hoa+dep+16&source=bl&ots=wlVWD4VxpF&sig=ACfU3U125dmezmGFYSEF_OsPRwFhdmin_g&hl=en&sa=X&ved=2ahUKEwj434b4paCHAxVOFFkFHcnvDg4Q6AF6BAgTEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -425,4 +425,9 @@ url = https://www.steadily.com/blog/michigan-hoa-laws-regulations
 match = 0.0%%
 title = 
 url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
+
+[www.cedarmanagementgroup.com]
+match = 0.0%%
+title = 
+url = https://www.cedarmanagementgroup.com/duties-of-an-hoa-president/
 
