--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-12 06:28:25
+lastsearch = 2024-07-12 08:02:02
 
 [www.mantubung.com]
-match = -138.9%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -105.6%%
+title = Mùng em bé chống muỗi đa năng cho trẻ em - Mùng Chụp
+url = https://www.mantubung.com/mung-em-be.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
-url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
+match = -61.1%%
+title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn tự bung
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -37,9 +37,9 @@ title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
 url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
 
 [easydream.vn]
-match = -105.6%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+match = -61.1%%
+title = mùng chụp tự bung gấp gọn cao cấp easy dream
+url = https://easydream.vn/man-mung-chup-tu-bung-gap-gon-danh-cho-nguoi-lon-134-15.html
 
 [www.mungtubung.com]
 match = -116.7%%
