--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-12 05:46:51
+lastsearch = 2024-07-12 07:55:50
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -89,7 +89,7 @@ url = http://br.ign.com/
 [books.google.com]
 match = -104.3%%
 title = 1968 Annual Supplement - Page 1252 - Google Books Result
-url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jTidhb&sig=ACfU3U2cd3ASfDOvzjqA6E7OxACJuwhBbw&hl=en&sa=X&ved=2ahUKEwjQqsvb95-HAxWGmYkEHehkDQkQ6AF6BAgUEAM
+url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jUkgf9&sig=ACfU3U2tyb1xchVHj4TkVvTZPwylHxNSUA&hl=en&sa=X&ved=2ahUKEwiV4O25paCHAxVVEFkFHQPPDFQQ6AF6BAgUEAM
 
 [30rates.com]
 match = -104.3%%
