--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-12 02:53:08
+lastsearch = 2024-07-12 07:55:30
 
 [www.walmart.com]
-match = -181.2%%
-title = Zury Natural Dream Feel & Look Ocean Wave 18", SOM RT ...
-url = https://www.walmart.com/ip/Zury-Natural-Dream-Feel-Look-Ocean-Wave-18-SOM-RT-BURG/984593486
+match = -162.5%%
+title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
+url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
 match = -243.8%%
-title = How I like to contour my lips #hudabeauty #foryou #beautytok ...
-url = https://www.tiktok.com/@hudabeauty/video/7267624422679334187
+title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
 
 [www.diepxuan.com]
 match = -150.0%%
