--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-12 06:28:37
+lastsearch = 2024-07-12 09:40:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -340,4 +340,9 @@ url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-han
 match = -240.0%%
 title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 cách ...
 url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
+
+[thtanthanh.phubinh.edu.vn]
+match = -100.0%%
+title = Cờ vua
+url = http://thtanthanh.phubinh.edu.vn/chuyen-mon/co-vua.html
 
