--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-12 02:46:55
+lastsearch = 2024-07-12 09:39:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = RecipRocal clubs
 url = https://www.ucco.com/files/231128-reciprocalClubs-List-p29.pdf
 
 [www.naiglobal.com]
-match = -137.5%%
-title = Listings
-url = https://www.naiglobal.com/listings/
+match = -109.1%%
+title = Properties - North America Listings Powered by BuildOut
+url = https://www.naiglobal.com/sale-lease-properties-buildout/
 
 [www.acswasc.org]
 match = 0.0%%
