--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-12 05:37:38
+lastsearch = 2024-07-12 09:54:18
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -223,8 +223,8 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 
 [shopee.vn]
 match = -176.9%%
-title = chăn ga dior giá tốt Tháng 6, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-phao-chan-sieu-nhe/1664654011/
+title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
