--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-11 22:39:23
+lastsearch = 2024-07-12 09:56:06
 
 [shopee.vn]
 match = -25.0%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-cto/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
+url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -41.7%%
-title = Thảm lau chân LÔNG LEN MỊN thấm hút tốt KHỔ 40*60cm ...
-url = https://www.lazada.vn/products/tham-lau-chan-long-len-min-tham-hut-tot-kho-4060cm-logo-hinh-ban-chan-i1740695503.html
+match = -75.0%%
+title = Thảm lau chân, thảm lau bàn chân siêu len mịn thấm hút ...
+url = https://www.lazada.vn/products/tham-lau-chan-tham-lau-ban-chan-sieu-len-min-tham-hut-va-mem-mai-size-40x60-i2386245794.html
 
 [megahomevietnam.com]
 match = 20.0%%
