--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-12 05:47:00
+lastsearch = 2024-07-12 09:55:45
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
-url = https://www.tuigroup.com/en-en
+match = -33.3%%
+title = ANNUAL REPORT 2015 / 16
+url = https://www.tuigroup.com/damfiles/default/tuigroup-15/en/investors/6_Reports-and-presentations/Reports/2016/TUI_AR_2015-16_withMagazine.pdf-4572fe3dec10f0196450291182933f8c.pdf
 
 [www.tui.nl]
 match = -316.7%%
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
-url = https://www.tui.co.uk/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
@@ -367,8 +367,8 @@ title = The official Hermes online store | Hermès USA
 url = https://www.hermes.com/us/en/
 
 [ca.trip.com]
-match = -191.7%%
-title = Tui Magic Life Rixos Beldibi +16, 2024 | ...
+match = -141.7%%
+title = Tui Magic Life Rixos Beldibi +16, 2024
 url = https://ca.trip.com/hotels/goynuk-mahallesi-hotel-detail-3445108/tui-magic-life-rixos-beldibi-16/
 
 [barutblueandiz.otel.direct]
