--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-12 09:39:45
+lastsearch = 2024-07-12 10:51:54
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -187,7 +187,7 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -50.0%%
-title = Rao vặt An Hữu - Cái Bè | Ấu con Đài Loan em ương từ trái ...
-url = https://m.facebook.com/groups/1958199444409629/posts/3858375234392031/
+match = 12.5%%
+title = Chợ 434 | ‼️THUẬN AN….
+url = https://m.facebook.com/groups/cho434/posts/873929537936678/
 
