--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-12 05:18:07
+lastsearch = 2024-07-12 10:46:16
 
 [www.diepxuan.com]
-match = 15.0%%
-title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
+match = 10.0%%
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
 match = -70.0%%
@@ -28,13 +28,13 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 10.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+title = chiếu nhựa, chiếu cói ở tại hà nội
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
 
 [trangvangvietnam.com]
-match = -90.0%%
-title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nội
-url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
+match = -65.0%%
+title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
+url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.sendo.vn]
 match = -75.0%%
