--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-12 04:13:44
+lastsearch = 2024-07-12 11:14:32
 
 [www.zillow.com]
 match = -69.2%%
@@ -37,8 +37,8 @@ title = Georgia Nicols | Georgia Nicols
 url = https://www.georgianicols.com/
 
 [mepublic.tarrantcounty.com]
-match = -215.4%%
-title = Medical Examiner's Case Records - Tarrant County
+match = -100.0%%
+title = MEDICAL EXAMINER'S CASE RECORDS
 url = https://mepublic.tarrantcounty.com/
 
 [www.redfin.com]
