--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-12 10:31:09
+lastsearch = 2024-07-12 11:16:26
 
 [www.riotgames.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Korean VS German🇰🇷🇦🇹🇩🇪
 url = https://www.youtube.com/watch?v=MJWRS6eZ9YE
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
+match = 52.0%%
+title = Ruột nệm Korea 150x190x09 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 
 [www.linkedin.com]
 match = -56.0%%
