--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-12 09:54:18
+lastsearch = 2024-07-12 12:13:09
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -238.5%%
+title = Ke Huy Quan (@kehuyquan) • Instagram photos and videos
+url = https://www.instagram.com/kehuyquan/?hl=en
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -276.9%%
+title = Chow hoi ting Chow - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
 match = -176.9%%
@@ -27,9 +27,9 @@ title = Results - LSA Student Government Winter 2023 Elections
 url = https://vote.umich.edu/index.php?mode=results&election=199828
 
 [www.linklaters.com]
-match = -71.4%%
-title = Sitemap
-url = https://www.linklaters.com/en-us/sitemap
+match = -50.0%%
+title = Podcasts
+url = https://www.linklaters.com/en-us/knowledge/podcasts
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
 
 [hongkongfp.com]
 match = -269.2%%
