--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-12 11:30:32
+lastsearch = 2024-07-12 12:17:51
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
 match = 12.5%%
@@ -52,9 +52,9 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -275.0%%
-title = Khlong Hoi Kong bird checklist - Avibase - Bird Checklists of the World
-url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH05sgkh
+match = -237.5%%
+title = Muang Chan bird checklist - Avibase - Bird Checklists of the World
+url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04simc
 
 [partner.goodsmile.info]
 match = 6.2%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -175.0%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
+match = -187.5%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
