--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-11 22:31:20
+lastsearch = 2024-07-12 12:16:30
 
 [www.instagram.com]
-match = -23.1%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -61.5%%
-title = Illustrator - Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -107.7%%
-title = Yuki Chan - Hong Kong, Hong Kong SAR
-url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
+match = -223.1%%
+title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
+url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
 
 [www.eduhk.hk]
 match = -200.0%%
