--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-12 11:15:46
+lastsearch = 2024-07-12 12:17:31
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,14 +12,14 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -231.2%%
-title = Who remembers this hack? Using a wet velour puff to apply ...
-url = https://www.tiktok.com/@hudabeauty/video/7316247408676080942
+match = -168.8%%
+title = At the airport, Christina and I stumbled across ...
+url = https://www.tiktok.com/@thelipsticklesbians/video/7278034439895043370
 
 [www.diepxuan.com]
-match = -162.5%%
-title = Túi Warmdream 2 gấp 180x200x12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [digitalmaine.com]
 match = -75.0%%
@@ -62,9 +62,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.instagram.com]
-match = 18.8%%
-title = Winter | 𝖆𝖕𝖗𝖎𝖑 18
-url = https://www.instagram.com/daydreamingwinter/reel/C5m8xjlOPBA/
+match = -193.8%%
+title = Meliá Hotels & Resorts | It's time to enjoy a warm dream ...
+url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 
 [demxanh.com]
 match = -156.2%%
